--- a/artwork.html
+++ b/artwork.html
@@ -87,22 +87,22 @@ body{
 
 <div class="row"> 
   <div class="column">
-    <img src="media/Processingportrait.png" style="width:30%">
-    <img src="media/Invisi-cloak.png" style="width:40%">
-    <img src="media/3dmashup.png" style="width:40%">
-    <img src="media/pastel.jpg" style="width:30%">
+    <img src="Processingportrait.png" style="width:30%">
+    <img src="Invisi-cloak.png" style="width:40%">
+    <img src="3dmashup.png" style="width:40%">
+    <img src="pastel.jpg" style="width:30%">
     	<a href="tweet.html">
-    		<img src="media/tweet.gif" style="width:25%">
+    		<img src="tweet.gif" style="width:25%">
     	</a>
   </div>
   <div class="column">
-    <img src="media/cloudy404.jpg" style="width:20%">
-    <img src="media/baby.jpg" style="width:30%">
+    <img src="cloudy404.jpg" style="width:20%">
+    <img src="baby.jpg" style="width:30%">
     <a href="citypopescape.html">
-        <img src="media/codeasart.jpg" style="width:40%">
+        <img src="codeasart.jpg" style="width:40%">
       </a>
        <a href="kanyequest.html">
-        <img src="media/kanyequest.png" style="width:30%">
+        <img src="kanyequest.png" style="width:30%">
       </a>
 </div>
 
