--- a/artwork.html
+++ b/artwork.html
@@ -12,6 +12,13 @@ body {
   font-family: arial;
 }
 
+.content {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 10px;
+}	
+	
 .glow {
   font-size: 40px;
   color: #fff;
