--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ background-color: #f5f5f5;
 </style>
 	</head>
 
-
+<div class="content">
 <h1 class="glow">Sophia Martinez</h1>
 		<div class="navbar">
 			<ul class="navlist">
