--- a/tweet.html
+++ b/tweet.html
@@ -11,7 +11,13 @@ body {
   background-color: #f5f5f5;
   font-family: arial;
 }
-
+   .content {
+  max-width: 500px;
+  margin: auto;
+  background: #f5f5f5;
+  padding: 10px;
+}
+    
 .glow {
   font-size: 40px;
   color: #fff;
@@ -52,6 +58,10 @@ body {
 <iframe width="560" height="315" src="https://www.youtube.com/embed/C-b8QKcszw8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   
 </iframe>
+    
+<p> Metamorphosis, 2/28/19, TVPaint
+I created this when I took my first animation class at De Anza. This was not my first experience with 2D animation, but it is a simple exercise that I am proud of. The instructor for my class passed two random subjects for us to “metamorphosize”. It is fun watching this animation on loop!
+    </p>
 
 
 </body>
