--- a/tweet.html
+++ b/tweet.html
@@ -44,7 +44,7 @@ body {
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
         <li><a href="artwork.html">Artwork</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
