--- a/about.html
+++ b/about.html
@@ -24,6 +24,13 @@ background-color: #f5f5f5;
   animation: glow 1s ease-in-out infinite alternate;
 }
 
+<h1> Meet the Artist </h1>
+
+<p>
+My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network. I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! 
+</p>
+ 	
+	
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
@@ -43,7 +50,7 @@ background-color: #f5f5f5;
 			<ul class="navlist">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="artwork.html">Artwork</a></li>
-				<li><a href="#">About</a></li>
+				<li><a href="about.html">About</a></li>
 				<li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
 				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
 			</ul>
