--- a/kanyequest.html
+++ b/kanyequest.html
@@ -13,6 +13,12 @@ body {
   font-family: arial;
 }
 
+    .content {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 10px;
+}
 .glow {
   font-size: 40px;
   color: #fff;
@@ -34,6 +40,7 @@ body {
 </style>
   </head>
   <body>
+  <div class="content">
 <h1 class="glow">Sophia Martinez</h1>
     <div class="navbar">
       <ul class="navlist">
@@ -48,7 +55,11 @@ body {
   <!--end of Nav bar-->
 
 <body>
-
+<p>
+    The concept of this animation came to me in a dream. It is incomplete because I was producing this animation for a 3 quarter production workshop at De Anza. From Fall 2017 to Summer 2018 I found free soundcloud tracks and cried as I struggled paying for the Creative Cloud subscription, moving from flash, to photoshop, then TVPaint! I had a bootleg TVpaint and struggled using that on my mac and having it crash.
+ I find aesthetic inspiration from Humongous Entertainment CD ROM games that I grew up playing with like Spy Fox and Putt Putt. The dream was definitely influenced by my taste in music (AKA Kanye lol) Pikmin and my relationship with my family. There was a lot more to the dream but I had to trim the fat for the sake of a narrative for this project.
+I wish more animation programs could run on mac, and were affordable! If my resources were consistent and reliable then this would be polished.
+    </p>
 
 <iframe width="1080" height="800" src="https://www.youtube.com/embed/2T0eq6Sz_nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
