--- a/about.html
+++ b/about.html
@@ -14,7 +14,13 @@ body {
 background-color: #f5f5f5;
   font-family: arial;
 }
-
+.content {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 10px;
+}
+	
 .glow {
   font-size: 40px;
   color: #fff;
@@ -23,7 +29,7 @@ background-color: #f5f5f5;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
-
+<div class="content">
 <h1> Meet the Artist </h1>
 
 <p>
@@ -40,7 +46,7 @@ My name is Sophia, I am born and raised in the South Bay area of California. Ani
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
-
+</div>
 </style>
 	</head>
 
