--- a/citypopescape.html
+++ b/citypopescape.html
@@ -50,6 +50,9 @@ body {
   <!--end of Nav bar-->
 
   <body>
+	  <h1> "CityPop Escape" </h1>
+	  <p> I created this artwork in processing, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. 
+		  The audience can interact with the artwork and flicker the lights of the buildings. </p>
   	<canvas data-processing-sources="CityPopEscape.pde"></canvas>
   </body>
   </html>
