--- a/about.html
+++ b/about.html
@@ -3,9 +3,8 @@
 <head>
 		<title> Sophia Martinez </title>
 		<meta charset= "UTF-8">
-		<link rel="stylesheet" type= "text/css" href="style.css">
+		<link rel="stylesheet" type= "text/css" href="indexstyle.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
 
 <style>
 
