--- a/about.html
+++ b/about.html
@@ -32,7 +32,11 @@ background-color: #f5f5f5;
 <h1> Meet the Artist </h1>
 
 <p>
-My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network. I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! 
+My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network.
+	I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! 
+	
+	Email- sophiaymartinez@gmail.com
+	IG- scribbledstarart	
 </p>
  	
 	
