--- a/about.html
+++ b/about.html
@@ -1,25 +1,25 @@
+
 <!DOCTYPE html>
 <html>
+<meta charset= "UTF-8">
+    <link rel="stylesheet" type= "text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!--Navigation bar-->
 <head>
-		<title> Sophia Martinez </title>
-		<meta charset= "UTF-8">
-		<link rel="stylesheet" type= "text/css" href="style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title> Sophia Martinez </title>
 <style>
-
-
 body {
-background-color: #f5f5f5;
+  background-color: #f5f5f5;
   font-family: arial;
 }
-.content {
+
+    .content {
   max-width: 500px;
   margin: auto;
   background: white;
-  padding: 10px;
+  padding: 5px;
 }
-	
 .glow {
   font-size: 40px;
   color: #fff;
@@ -27,9 +27,8 @@ background-color: #f5f5f5;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
-	}
- 	
-	
+}
+
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
@@ -39,11 +38,24 @@ background-color: #f5f5f5;
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
-</div>
 </style>
-	</head>
+  </head>
+  <body>
+  <div class="content">
+<h1 class="glow">Sophia Martinez</h1>
+    <div class="navbar">
+      <ul class="navlist">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="artwork.html">Artwork</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
+        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+      </ul>
+    </div>
+  </body>
+  <!--end of Nav bar-->
 
-<div class="content">
+<body>
 <h1> Meet the Artist </h1>
 <p>
 My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network.
@@ -52,16 +64,9 @@ My name is Sophia, I am born and raised in the South Bay area of California. Ani
 	Email- sophiaymartinez@gmail.com
 	IG- scribbledstarart	
 </p>
-	
-<h1 class="glow">Sophia Martinez</h1>
-		<div class="navbar">
-			<ul class="navlist">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="artwork.html">Artwork</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
-			</ul>
-		</div>
-	</body>
+
+
+</body>
 </html>
+
+
