--- a/artwork.html
+++ b/artwork.html
@@ -96,7 +96,8 @@ body{
   <div class="column">
     <img src="Processingportrait.png" style="width:30%">
     <img src="Invisi-cloak.png" style="width:40%">
-    <img src="3dmashup.png" style="width:40%">
+   <a href="3dmashup.html">
+	  <img src="3dmashup.png" style="width:40%">
     <img src="pastel.jpg" style="width:30%">
     	<a href="tweet.html">
     		<img src="tweet.gif" style="width:25%">
@@ -111,6 +112,8 @@ body{
        <a href="kanyequest.html">
         <img src="kanyequest.png" style="width:30%">
       </a>
+	<a href="ARGraphics.html">
+    		<img src="arGraphics.png" style="width:25%">
 </div>
 
 </body>
