--- a/3dmashup.html
+++ b/3dmashup.html
@@ -52,8 +52,9 @@ body {
   <!--end of Nav bar-->
 
 <body>
-
-
+    <h1> 3d Mashup </h1>
+<p> This artwork was inspired by my late grandfather and aesthetics from a song associated with remembering loved ones who have passed. The color and vibrancy of the flowers contrast the monochrome zebra and checkerboard. The butterfly wings suggest the zebra’s relationship support in helping the flowers grow.
+</p>
 <div class="sketchfab-embed-wrapper">
     <iframe title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/90062cb57edf4d9e99ef49bdd22271e0/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
@@ -62,9 +63,7 @@ body {
     by <a href="https://sketchfab.com/sophiaymartinez?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sophia</a>
     on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
 </p>
-<p> This mashup was inspired by a personal favorite Japanese vocaloid song. It is a personal piece that plays with the contrast of vibrant saturated colors and monochrome.
-I attempted to use Meshmixer, but it kept crashing on my laptop so I switched to using Maya.
-</p>
+
 </div>
 
 </body>
