--- a/artwork.html
+++ b/artwork.html
@@ -157,6 +157,20 @@ body{
 	<a href="ARGraphics.html">
     		<img src="arGraphics.png" style="width:25%">
 </div>
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">×</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+<!-- <script>
+function myFunction(imgs) {
+  var expandImg = document.getElementById("expandedImg");
+  var imgText = document.getElementById("imgtext");
+  expandImg.src = imgs.src;
+  imgText.innerHTML = imgs.alt;
+  expandImg.parentElement.style.display = "block";
+}
+</script> --></div>
+<!--END MAIN-->   
 
 </body>
 </html>
