--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
@@ -54,19 +53,11 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-
-<body>
-
-<p>
-My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network.
-	I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! 
-	
-	Email- sophiaymartinez@gmail.com
-	IG- scribbledstarart	
-</p>
-
-
-</body>
-</html>
-
-
+      <h1>About Me</h1>
+      <img src="artstudent.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <div class="w3-left-align w3-padding-large">
+        <p>My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network.
+	I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! </p>
+	      <p> Email- sophiaymartinez@gmail.com </p>     
+     
+</div>
