--- a/about.html
+++ b/about.html
@@ -9,10 +9,12 @@
     <title> Sophia Martinez </title>
 <style>
 body {
-  background-color: #f5f5f5;
+  background-image: "spiral.gif";
+  background-color: ##f0f0f0;
   font-family: arial;
 }
 
+	
     .content {
   max-width: 500px;
   margin: auto;
@@ -61,5 +63,6 @@ body {
         <p>My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network.
 	I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! </p>
 	      <p> Email- sophiaymartinez@gmail.com </p>     
-     
+	    </div>
+		    </div>
 </div>
