--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <style>
 body {
   background-image: "spiral.gif";
-  background-color: ##f0f0f0;
+  background-color: #f0f0f0;
   font-family: arial;
 }
 
