--- a/about.html
+++ b/about.html
@@ -13,7 +13,12 @@ body {
   background-color: #f0f0f0;
   font-family: arial;
 }
-
+.content {
+  max-width: 500px;
+  margin: auto;
+  padding: 5px;
+}
+	
 .glow {
   font-size: 40px;
   color: #fff;
