--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title> Sophia Martinez </title>
 <style>
 body {
-  background-image: "spiral.gif";
+  background-image: "cloudsdrift.gif";
   background-color: #f0f0f0;
   font-family: arial;
 }
