--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
     <title> Sophia Martinez </title>
 <style>
 body {
-  background-image: "cloudsdrift.gif";
   background-color: #f0f0f0;
   font-family: arial;
 }
@@ -53,6 +52,12 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
+	  <style>
+body  {
+  background-image: url("cloudsdrift.gif");
+  background-color:  #f2f2f2;
+}
+</style>
 	    <div class="w3-center w3-white w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
