--- a/about.html
+++ b/about.html
@@ -3,7 +3,14 @@
 <meta charset= "UTF-8">
     <link rel="stylesheet" type= "text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<head>
+<style>
+body  {
+  background-image: url("cloudsdrift.gif");
+  background-color:  #f2f2f2;
+}
+</style>
+	</head>
 <!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
@@ -52,12 +59,7 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-	  <style>
-body  {
-  background-image: url("cloudsdrift.gif");
-  background-color:  #f2f2f2;
-}
-</style>
+	  
 	    <div class="w3-center w3-white w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
