--- a/artwork.html
+++ b/artwork.html
@@ -148,15 +148,28 @@ body{
 			     <h3>Baby self-portrait"</h3>
 			     <p>"This artwork was created using chalk pastel. Growing up I had a peculiar fascination for things like ladybugs, die and the color pink.
 				     I referenced an old and favorite photo of me when I was very young and in my grandparents house. Their house was my daycare center and my second home."</p>
-    <a href="citypopescape.html">
+			</div>
+		</div>
+		<div class="column">
+		     <div class="content">
+			     <a href="citypopescape.html">
         <img src="codeasart.jpg" style="width:40%">
       </a>
+			</div>
+		</div>
+		<div class="column">
+		     <div class="content">
        <a href="kanyequest.html">
         <img src="kanyequest.png" style="width:30%">
       </a>
+			</div>
+		</div>
+		<div class="column">
+		     <div class="content">
 	<a href="ARGraphics.html">
     		<img src="arGraphics.png" style="width:25%">
 </div>
+			</div>
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">×</span>
   <img id="expandedImg" style="width:100%">
