--- a/artwork.html
+++ b/artwork.html
@@ -131,7 +131,6 @@ body{
     	<a href="tweet.html">
 		<img src="tweet.gif" style="width:25%"> </a>
 		<h3>Tweet</h3>
-	
 		</div>
 		</div>
   <div class="column">
@@ -146,7 +145,7 @@ body{
 		<div class="column">
 		     <div class="content">
   			  <img src="baby.jpg" style="width:30%">
-			     <h3>Baby self-portrait"</h3>
+			     <h3>Baby self-portrait</h3>
 			     <p>"This artwork was created using chalk pastel. Growing up I had a peculiar fascination for things like ladybugs, die and the color pink.
 				     I referenced an old and favorite photo of me when I was very young and in my grandparents house. Their house was my daycare center and my second home."</p>
 			</div>
@@ -154,8 +153,9 @@ body{
 		<div class="column">
 		     <div class="content">
 			     <a href="citypopescape.html">
-        <img src="codeasart.jpg" style="width:40%">
+        <img src="codeasart.jpg" style="width:40%">		  
       </a>
+			     <h3> CityPop Escape </h3>
 			</div>
 		</div>
 		<div class="column">
@@ -163,13 +163,15 @@ body{
        <a href="kanyequest.html">
         <img src="kanyequest.png" style="width:30%">
       </a>
+			     <h3> Kanye Quest </h3>
 			</div>
 		</div>
 		<div class="column">
 		     <div class="content">
 	<a href="ARGraphics.html">
     		<img src="arGraphics.png" style="width:25%">
-</div>
+		<h3> Free! Style </h3>
+			</div>
 			</div>
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">×</span>
