--- a/artwork.html
+++ b/artwork.html
@@ -99,6 +99,18 @@ body{
 	   <h3>Portrait</h3>   
     	</div>
  	 </div>
+	 <div class="column">
+   <div class="content"> 	   
+   	 <img src="Painting1.png" style="width:40%">
+	   <h3>windmill</h3>   
+    	</div>
+ 	 </div>
+	 <div class="column">
+   <div class="content"> 	   
+   	 <img src="Painting2.png" style="width:40%">
+	   <h3>mushroom</h3>   
+    	</div>
+ 	 </div>
   <div class="column">
    <div class="content">
     	<img src="Invisi-cloak.png" style="width:40%">
