--- a/artwork.html
+++ b/artwork.html
@@ -101,13 +101,13 @@ body{
  	 </div>
 	 <div class="column">
    <div class="content"> 	   
-   	 <img src="Painting1.png" style="width:40%">
+   	 <img src="painting1.png" style="width:40%">
 	   <h3>windmill</h3>   
     	</div>
  	 </div>
 	 <div class="column">
    <div class="content"> 	   
-   	 <img src="Painting2.png" style="width:40%">
+   	 <img src="painting2.png" style="width:40%">
 	   <h3>mushroom</h3>   
     	</div>
  	 </div>
