--- a/artwork.html
+++ b/artwork.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Navigation bar-->
 <head>
-		<title> Sophia Martinez </title>
+    <title> Sophia Martinez </title>
 <style>
 body {
   background-color: #f5f5f5;
   font-family: arial;
 }
-
+.content {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 10px;
+} 
+  
 .glow {
   font-size: 40px;
   color: #fff;
@@ -20,7 +26,6 @@ body {
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
-
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
@@ -31,44 +36,39 @@ body {
   }
 }
 </style>
-	</head>
-	<body>
+  </head>
+  <body>
 <h1 class="glow">Sophia Martinez</h1>
-		<div class="navbar">
-			<ul class="navlist">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="artwork.html">Artwork</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
-			</ul>
-		</div>
-	</body>
-	<!--end of Nav bar-->
+    <div class="navbar">
+      <ul class="navlist">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="artwork.html">Artwork</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
+        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+      </ul>
+    </div>
+  </body>
+  <!--end of Nav bar-->
 <style>
 * {
-	box-sizing: border-box;
-}	
-
+  box-sizing: border-box;
+} 
 body{
-	margin: 0;
-	font-family: Arial;
+  margin: 0;
+  font-family: Arial;
 }
-
 .header{
-	text-align:center;
-	padding: 32px;
+  text-align:center;
+  padding: 32px;
 }
-
 .row {
-	display: -ms-flexbox; /* IE10 */
-	display: flex;
-	-ms-flex-wrap: wrap; /* IE10 */
-	flex-wrap: wrap;
-	padding: 0 4px;
-
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
-
 @media screen and (max-width: 600px) {
   .column {
     -ms-flex: 100%;
@@ -87,22 +87,22 @@ body{
 
 <div class="row"> 
   <div class="column">
-    <img src="media/Processingportrait.png" style="width:30%">
-    <img src="media/Invisi-cloak.png" style="width:40%">
-    <img src="media/3dmashup.png" style="width:40%">
-    <img src="media/pastel.jpg" style="width:30%">
-    	<a href="tweet.html">
-    		<img src="media/tweet.gif" style="width:25%">
-    	</a>
+    <img src="Processingportrait.png" style="width:30%">
+    <img src="Invisi-cloak.png" style="width:40%">
+    <img src="3dmashup.png" style="width:40%">
+    <img src="pastel.jpg" style="width:30%">
+      <a href="tweet.html">
+        <img src="tweet.gif" style="width:25%">
+      </a>
   </div>
   <div class="column">
-    <img src="media/cloudy404.jpg" style="width:20%">
-    <img src="media/baby.jpg" style="width:30%">
+    <img src="cloudy404.jpg" style="width:20%">
+    <img src="baby.jpg" style="width:30%">
     <a href="citypopescape.html">
-        <img src="media/codeasart.jpg" style="width:40%">
+        <img src="codeasart.jpg" style="width:40%">
       </a>
        <a href="kanyequest.html">
-        <img src="media/kanyequest.png" style="width:30%">
+        <img src="kanyequest.png" style="width:30%">
       </a>
 </div>
 
