--- a/citypopescape.html
+++ b/citypopescape.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Navigation bar-->
 <head>
-	<script type="text/javascript" src="processing.js"></script>
+  <script type="text/javascript" src="processing.js"></script>
     <title> Sophia Martinez </title>
 <style>
 body {
   background-color: #f5f5f5;
   font-family: arial;
 }
-
 .glow {
   font-size: 40px;
   color: #fff;
@@ -21,7 +20,6 @@ body {
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
-
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
@@ -41,7 +39,7 @@ body {
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
         <li><a href="artwork.html">Artwork</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
@@ -50,6 +48,9 @@ body {
   <!--end of Nav bar-->
 
   <body>
-  	<canvas data-processing-sources="CityPopEscape.pde"></canvas>
+    <h1> "CityPop Escape" </h1>
+    <p> I created this artwork in processing, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. 
+      The audience can interact with the artwork and flicker the lights of the buildings. </p>
+    <canvas data-processing-sources="CityPopEscape.pde"></canvas>
   </body>
   </html>
