--- a/artwork.html
+++ b/artwork.html
@@ -87,8 +87,10 @@ body{
   <p> My work composed of animations, sketches, and digital media pieces from De Anza, Foothill, and San José State </p>
 </div>
 <!-- portfolio grid -->
-<div class="row"> 
-  <div class="column">
+<div class="portfolio"> 
+  <div class="container">
+	  <h2 class="he">Portfolio</h2>
+	  <div
 
     <img src="Processingportrait.png" style="width:30%">
     <img src="Invisi-cloak.png" style="width:40%">
