--- a/artwork.html
+++ b/artwork.html
@@ -92,6 +92,11 @@ body{
       <h2 class="he">Portfolio</h2>
       <div class="our-work">
         <div>
+          <a href="StayHome.html">
+            <img src="StayHomeDemo.jpg" alt="stayhomedemo">
+          </a>
+        </div>
+        <div>
           <a href="tweet.html">
             <img src="tweet.gif" alt="tweet">
           </a>
@@ -112,6 +117,7 @@ body{
         <div>
           <a href="invclk.html">
             <img src="Invisi-cloak.png" alt="Invisi-cloak">
+            </a>
           </div>
         <div>
           <a href="3dmashup.html">
