--- a/artwork.html
+++ b/artwork.html
@@ -97,6 +97,11 @@ body{
           </a>
         </div>
         <div>
+          <a href="https://symartinez21.github.io/Metastuck.github.io/">
+            <img src="stuck.png" alt="stuck">
+          </a>
+        </div>
+        <div>
           <a href="tweet.html">
             <img src="tweet.gif" alt="tweet">
           </a>
