--- a/artwork.html
+++ b/artwork.html
@@ -98,7 +98,12 @@ body{
         </div>
         <div>
           <a href="https://symartinez21.github.io/Metastuck.github.io/">
-            <img src="stuck.png" alt="stuck">
+            <img src="stuck.png" alt="Quar-ad-venture">
+          </a>
+        </div>
+        <div>
+          <a href= "proj1.html">
+            <img src="proj1.png" alt="video">
           </a>
         </div>
         <div>
@@ -109,6 +114,11 @@ body{
         <div>
            <a href="kanyequest.html">
             <img src="kanyequest.png" alt="kanyequest">
+          </a>
+        </div>
+        <div>
+          <a href="cloudy.html">
+            <img src="cloudy404.jpg" alt="cloud404">
           </a>
         </div>
         <div>
