--- a/proj1.html
+++ b/proj1.html
@@ -51,16 +51,11 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/naxPA6aSIr8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>Stay Home (Demo)</h3>
-      <p>Title: Stay Home (Demo)
-
-Medium: Premiere Pro, Photoshop, DSLR Camera, iPhoneXR
-
-Dimension: 1920x1080p
-
-I wanted to apply the video editing knowledge I've learned throughout the semester to create this video of what would be a demo for a video game! It's quarantine-themed but I also understand that theme is running dry and I would have to make it more interesting somehow. I tried this adventure game concept in my previous project and wanted to expand on it! The music comes from old classic video games that I grew up playing, and the graphics are inspired by video games for the Nintendo Gameboy.
-I alternated between using my Canon EOS DSLR and my iphone to record the video to broaden my range of quality. Using the DSLR I wanted more depth of field and different colors that I feel would be flat on iphone. Adding the video footage together in premiere was fun and I enjoyed filming and acting for this project!</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/KWJfy6UAh38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Transience: Capturing the Subtle Things in Life </h3>
+<p> Year: 2020
+Medium: Full HD Color Video, 00"02"14
+Description:  My work was inspired by the style of video captured in vlogs on youtube and stories on social media found on Instagram and Snapchat. My goal was to create an aesthetically pleasing video and experimenting with color correction. What I have learned to appreciate about vlogs is that the footage captured means something to the videographer, and that they wish to share their vision and experience with others. 
+</p>
 
 </html>
