images still whack

--- a/html/tweet.html
+++ b/html/tweet.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport">
 <!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
