--- a/html/artwork.html
+++ b/html/artwork.html
@@ -89,7 +89,6 @@ body{
 <!-- portfolio grid -->
 <div class="portfolio"> 
   <div class="container">
-      <h2 class="he"> Portfolio </h2>
       <div class="our-work">
         <div>
           <a href="StayHome.html">
@@ -106,7 +105,48 @@ body{
             <img src="proj1.png" alt="video">
           </a>
         </div>
+        <div>
+          <a href="tweet.html">
+            <img src="tweet.gif" alt="tweet">
+          </a>
+        </div>
+        <div>
+           <a href="kanyequest.html">
+            <img src="kanyequest.png" alt="kanyequest">
+          </a>
+        </div>
+        <div>
+          <a href="cloudy.html">
+            <img src="cloudy404.jpg" alt="cloud404">
+          </a>
+        </div>
+        <div>
+          <a href="ARGraphics.html">
+             <img src="arGraphics.png" alt="arGraphics">
+           </a>
+          </div>
+        <div>
+            <img src="Processingportrait.png" alt="portrait">
+          </div>
+        <div>
+          <a href="invclk.html">
+            <img src="Invisi-cloak.png" alt="Invisi-cloak">
+            </a>
+          </div>
+        <div>
+          <a href="3dmashup.html">
+              <img src="3dmashup.png" alt="3dmashup">
+            </a>
+          </div>
+          <div>
+            <a href="citypopescape.html">
+              <img src="codeasart.jpg" alt="citypop">
+            </a>
+          </div>
         
+      <div>
+        <a href="pastel.html">
+          <img src="pastel.jpg" alt="pastel">
         </a>
 		    </div>
       </div>
