why does this file keep moving

--- a/html/artwork.html
+++ b/html/artwork.html
@@ -92,65 +92,63 @@ body{
       <div class="our-work">
         <div>
           <a href="StayHome.html">
-            <img src="StayHomeDemo.jpg" alt="stayhomedemo">
+            <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
           </a>
         </div>
         <div>
           <a href="https://symartinez21.github.io/Metastuck.github.io/">
-            <img src="stuck.png" alt="Quar-ad-venture">
+            <img src="images/stuck.png" alt="Quar-ad-venture">
           </a>
         </div>
         <div>
           <a href= "proj1.html">
-            <img src="proj1.png" alt="video">
+            <img src="images/proj1.png" alt="video">
           </a>
         </div>
         <div>
           <a href="tweet.html">
-            <img src="tweet.gif" alt="tweet">
+            <img src="images/tweet.gif" alt="tweet">
           </a>
         </div>
         <div>
            <a href="kanyequest.html">
-            <img src="kanyequest.png" alt="kanyequest">
+            <img src="images/kanyequest.png" alt="kanyequest">
           </a>
         </div>
         <div>
           <a href="cloudy.html">
-            <img src="cloudy404.jpg" alt="cloud404">
+            <img src="images/cloudy404.jpg" alt="cloud404">
           </a>
         </div>
         <div>
           <a href="ARGraphics.html">
-             <img src="arGraphics.png" alt="arGraphics">
+             <img src="images/arGraphics.png" alt="arGraphics">
            </a>
           </div>
         <div>
-            <img src="Processingportrait.png" alt="portrait">
+            <img src="images/Processingportrait.png" alt="portrait">
           </div>
         <div>
           <a href="invclk.html">
-            <img src="Invisi-cloak.png" alt="Invisi-cloak">
+            <img src="images/Invisi-cloak.png" alt="Invisi-cloak">
             </a>
           </div>
         <div>
           <a href="3dmashup.html">
-              <img src="3dmashup.png" alt="3dmashup">
+              <img src="images/3dmashup.png" alt="3dmashup">
             </a>
           </div>
           <div>
             <a href="citypopescape.html">
-              <img src="codeasart.jpg" alt="citypop">
+              <img src="images/codeasart.jpg" alt="citypop">
             </a>
           </div>
-        
       <div>
         <a href="pastel.html">
-          <img src="pastel.jpg" alt="pastel">
+          <img src="images/pastel.jpg" alt="pastel">
         </a>
 		    </div>
       </div>
-		</div>
 	</div>
 </body>
 </html>
