fixing links and css for pages not working

--- a/artwork.html
+++ b/artwork.html
@@ -96,7 +96,7 @@ body{
           </a>
         </div>
         <div>
-          <a href="html/https://symartinez21.github.io/Metastuck.github.io/">
+          <a href="html/symartinez21.github.io/Metastuck.github.io/">
             <img src="images/stuck.png" alt="Quar-ad-venture">
           </a>
         </div>
