--- a/html/artwork.html
+++ b/html/artwork.html
@@ -91,37 +91,37 @@ body{
   <div class="container">
       <div class="our-work">
         <div>
-          <a href="StayHome.html">
+          <a href="html/StayHome.html">
             <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
           </a>
         </div>
         <div>
-          <a href="https://symartinez21.github.io/Metastuck.github.io/">
+          <a href="html/https://symartinez21.github.io/Metastuck.github.io/">
             <img src="images/stuck.png" alt="Quar-ad-venture">
           </a>
         </div>
         <div>
-          <a href= "proj1.html">
+          <a href= "html/proj1.html">
             <img src="images/proj1.png" alt="video">
           </a>
         </div>
         <div>
-          <a href="tweet.html">
+          <a href="html/tweet.html">
             <img src="images/tweet.gif" alt="tweet">
           </a>
         </div>
         <div>
-           <a href="kanyequest.html">
+           <a href="html/kanyequest.html">
             <img src="images/kanyequest.png" alt="kanyequest">
           </a>
         </div>
         <div>
-          <a href="cloudy.html">
+          <a href="html/cloudy.html">
             <img src="images/cloudy404.jpg" alt="cloud404">
           </a>
         </div>
         <div>
-          <a href="ARGraphics.html">
+          <a href="html/ARGraphics.html">
              <img src="images/arGraphics.png" alt="arGraphics">
            </a>
           </div>
@@ -129,22 +129,22 @@ body{
             <img src="images/Processingportrait.png" alt="portrait">
           </div>
         <div>
-          <a href="invclk.html">
+          <a href="html/invclk.html">
             <img src="images/Invisi-cloak.png" alt="Invisi-cloak">
             </a>
           </div>
         <div>
-          <a href="3dmashup.html">
+          <a href="html/3dmashup.html">
               <img src="images/3dmashup.png" alt="3dmashup">
             </a>
           </div>
           <div>
-            <a href="citypopescape.html">
+            <a href="html/citypopescape.html">
               <img src="images/codeasart.jpg" alt="citypop">
             </a>
           </div>
       <div>
-        <a href="pastel.html">
+        <a href="html/pastel.html">
           <img src="images/pastel.jpg" alt="pastel">
         </a>
 		    </div>
