--- a/html/artwork.html
+++ b/html/artwork.html
@@ -42,9 +42,9 @@ body {
 
     <div class="navbar">
       <ul class="navlist">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="html/index.html">Home</a></li>
+        <li><a href="html/artwork.html">Artwork</a></li>
+        <li><a href="html/about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
@@ -96,7 +96,7 @@ body{
           </a>
         </div>
         <div>
-          <a href="html/symartinez21.github.io/Metastuck.github.io/">
+          <a href="https://symartinez21.github.io/Metastuck.github.io/index.html">
             <img src="images/stuck.png" alt="Quar-ad-venture">
           </a>
         </div>
