new css for pages

--- a/artwork.html
+++ b/artwork.html
@@ -121,8 +121,8 @@ body{
           </a>
         </div>
         <div>
-          <a href="html/ARGraphics.html">
-             <img src="images/arGraphics.png" alt="arGraphics">
+          <a href="html/Flow.html">
+             <img src="images/flow.png" alt="free">
            </a>
           </div>
         <div>
