--- a/html/Flow.html
+++ b/html/Flow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="style.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Navigation bar-->
 <head>
@@ -57,7 +57,7 @@ body {
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9XsXbshpqrs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
     
-<p> AR Graphics, 9/30/19, 
+<p> Flow, 9/30/19, 
 Used my Makoto Tachibana figma to make a stop motion video. Then I was experimenting with after effects and wanted to replicate the painted streak effect that I see when people edit dance videos.    </p>
 
 
