--- a/html/proj1.html
+++ b/html/proj1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="artwork.css">
     <meta name="viewport" >
 <!--Navigation bar-->
 <head>
@@ -42,9 +42,9 @@ body {
 <h1 class="glow">Sophia Martinez</h1>
     <div class="navbar">
       <ul class="navlist">
-        <li><a href="html/index.html">Home</a></li>
-        <li><a href="html/artwork.html">Artwork</a></li>
-        <li><a href="html/about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="artwork.html">Artwork</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
