--- a/html/kanyequest.html
+++ b/html/kanyequest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="style.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--Navigation bar-->
