--- a/html/tweet.html
+++ b/html/tweet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="artwork.css">
     <meta name="viewport">
 <!--Navigation bar-->
 <head>
