--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <style>
 
 
-body {
+/*body {
 background-color: #f5f5f5;
   font-family: arial;
 }
@@ -18,7 +18,7 @@ background-color: #f5f5f5;
     <link rel="stylesheet" type= "text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<head>
-<style>
+<style>*/
 body  {
   background-image: url("cloudsdrift.gif");
   background-color:  #f2f2f2;
