--- a/artwork.html
+++ b/artwork.html
@@ -148,6 +148,11 @@ body{
           <img src="images/pastel.jpg" alt="pastel">
         </a>
 		    </div>
+		    <div>
+        <a href="html/paintings.html">
+          <img src="images/painting1.png" alt="mushroom">
+        </a>
+		    </div>
       </div>
 	</div>
 </body>
