--- a/html/pastel.html
+++ b/html/pastel.html
@@ -55,6 +55,7 @@ body {
   <!--end of Nav bar-->
 
 <h3>Pastel Portrait</h3>
+      <img src="images/pastel.jpg" alt="pastel">
       <p>11/18/19, Chalk Pastel
 "This self portrait was a final for one of the last art classes I took at De-Anza. I attempted to capture my golden undertones of my skin and referenced a selfie I took. 
         In this piece I challenged myself to render the skin tone as accurately as I could because coloring is not my strength."
