--- a/about.html
+++ b/about.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title> Sophia Martinez </title>
-		<meta charset= "UTF-8">
-		<link rel="stylesheet" type= "text/css" href="style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-
-
-/*body {
-background-color: #f5f5f5;
-  font-family: arial;
-}
-
 <meta charset= "UTF-8">
     <link rel="stylesheet" type= "text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<head>
-<style>*/
+  <head>
+<style>
 body  {
   background-image: url("cloudsdrift.gif");
   background-color:  #f2f2f2;
 }
 </style>
-
+  </head>
 <!--Navigation bar-->
-
+<head>
     <title> Sophia Martinez </title>
 <style>
 body {
@@ -38,8 +24,7 @@ body {
   margin: auto;
   padding: 5px;
 }
-	
-
+  
 .glow {
   font-size: 40px;
   color: #fff;
@@ -48,7 +33,6 @@ body {
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
-
 
 @-webkit-keyframes glow {
   from {
@@ -59,25 +43,24 @@ body {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
-
-
 </style>
-	</head>
-
+  </head>
+  <body>
+  <div class="content">
 <h1 class="glow">Sophia Martinez</h1>
-		<div class="navbar">
-			<ul class="navlist">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="artwork.html">Artwork</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
-			</ul>
-		</div>
-	</body>
+    <div class="navbar">
+      <ul class="navlist">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="artwork.html">Artwork</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
+        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+      </ul>
+    </div>
+  </body>
   <!--end of Nav bar-->
-	  
-	    <div class="w3-center w3-white w3-container" style="height:700px">
+    
+    <div class="w3-center w3-white w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="bealright.png" class="w3-margin w3-circle" alt="mystyle" style="width:50%">
