might redo navbar

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <head>
 <style>
 body  {
-  background-image: url("cloudsdrift.gif");
+  background-image: url("images/cloudsdrift.gif");
   background-color:  #f2f2f2;
 }
 </style>
