--- a/html/paintings.html
+++ b/html/paintings.html
@@ -3,41 +3,7 @@
 <meta charset= "UTF-8">
     <link rel="stylesheet" type= "text/css" href="artwork.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
-<head>
-    <title> Sophia Martinez </title>
-<style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
-   .content {
-  max-width: 500px;
-  margin: auto;
-  background: #f5f5f5;
-  padding: 10px;
-}
-    
-.glow {
-  font-size: 40px;
-  color: #fff;
-  text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-}
 
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-}
-</style>
-  </head>
   <body>
 <h1 class="glow">Sophia Martinez</h1>
     <div class="navbar">
@@ -54,9 +20,9 @@ body {
 
 <body>
 
-  <img src="painting1.png" style="width:40%">
-  <img src="painting2.png" style="width:40%">
-  <img src="painting3.png" style="width:40%">
+  <img src="images/painting1.png" style="width:40%">
+  <img src="images/painting2.png" style="width:40%">
+  <img src="images/painting3.png" style="width:40%">
      <h3>Paintings</h3>
      <p>
        Series of painting practice from photoshop
