--- a/artwork.html
+++ b/artwork.html
@@ -150,7 +150,7 @@ body{
 		    </div>
 		    <div>
         <a href="html/paintings.html">
-          <img src="images/painting1.png" alt="mushroom">
+          <img src="images/painting3.png" alt="neon">
         </a>
 		    </div>
       </div>
