--- a/html/paintings.html
+++ b/html/paintings.html
@@ -54,9 +54,9 @@ body {
 
 <body>
 
-  <img src="images/painting1.png" style="width:40%">
-  <img src="images/painting2.png" style="width:40%">
-  <img src="images/painting3.png" style="width:40%">
+  <img src="images/painting1.png" alt="windmill">
+  <img src="images/painting2.png" alt="mushroom">
+  <img src="images/painting3.png" alt="neon">
      <h3>Paintings</h3>
      <p>
        Series of painting practice from photoshop
