--- a/html/paintings.html
+++ b/html/paintings.html
@@ -3,7 +3,41 @@
 <meta charset= "UTF-8">
     <link rel="stylesheet" href="artwork.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<body>
+<!--Navigation bar-->
+    <title> Sophia Martinez </title>
+<style>
+body {
+  background-color: #f0f0f0;
+  font-family: arial;
+}
+.content {
+  max-width: 500px;
+  margin: auto;
+  padding: 5px;
+}
+  
+.glow {
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+</style>
+  </head>
+  <body>
+  <div class="content">
 <h1 class="glow">Sophia Martinez</h1>
     <div class="navbar">
       <ul class="navlist">
@@ -15,12 +49,13 @@
       </ul>
     </div>
   </body>
-
+  <!--end of Nav bar-->
+    
 <body>
 
-  <img src="images/painting1.png" alt="windmill">
-  <img src="images/painting2.png" alt="mushroom">
-  <img src="images/painting3.png" alt="neon">
+  <img src="ePortfolio/images/painting1.png" alt="windmill">
+  <img src="ePortfolio/images/painting2.png" alt="mushroom">
+  <img src="ePortfolio/images/painting3.png" alt="neon">
      <h3>Paintings</h3>
      <p>
        Series of painting practice from photoshop
