the images wont show up...

--- a/html/paintings.html
+++ b/html/paintings.html
@@ -52,15 +52,13 @@ body {
   <!--end of Nav bar-->
     
 <body>
-
-  <img src="ePortfolio/images/painting1.png" alt="windmill">
-  <img src="ePortfolio/images/painting2.png" alt="mushroom">
-  <img src="ePortfolio/images/painting3.png" alt="neon">
+  <img src="images/painting1.png" alt="windmill">
+  <img src="images/painting2.png" alt="mushroom">
+  <img src="images/painting3.png" alt="neon">
      <h3>Paintings</h3>
      <p>
        Series of painting practice from photoshop
      </p>
-
-
 </body>
+
 </html>
