--- a/html/paintings.html
+++ b/html/paintings.html
@@ -82,9 +82,9 @@ body{
 </head>
     
 <body>
-  <img src="images/painting1.png" alt="windmill">
-  <img src="images/painting2.png" alt="mushroom">
-  <img src="images/painting3.png" alt="neon">
+  <img src="/images/painting1.png" alt="windmill">
+  <img src="/images/painting2.png" alt="mushroom">
+  <img src="/images/painting3.png" alt="neon">
      <h3>Paintings</h3>
      <p>
        Series of painting practice from photoshop
