--- a/html/paintings.html
+++ b/html/paintings.html
@@ -48,10 +48,10 @@ body {
 </head>
     
 <body>
-  <img src="/images/painting1.png" alt="windmill">
-  <img src="/images/painting2.png" alt="mushroom">
-  <img src="/images/painting3.png" alt="neon">
-     <h3>Paintings</h3>
+  <h3>Paintings</h3>
+  <img src="/images/painting1.png" alt="windmill" width="333" height="500">
+  <img src="/images/painting2.png" alt="mushroom" width="333" height="500">
+  <img src="/images/painting3.png" alt="neon" width="333" height="500">
      <p>
        Series of painting practice from photoshop
      </p>
