--- a/html/cloudy.html
+++ b/html/cloudy.html
@@ -51,7 +51,9 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-<h2> <img src="images/cloudy404.jpg" alt="cloud404"> </h2>
+<h2> 
+  <img src="images/cloudy404.jpg" alt="cloud404"> 
+</h2>
 <h3>Glitch Art</h3>
       <p>"My "happy place" is above the clouds, and that imagery inspired this artwork. I had an image that I took from a flight of fluffy white clouds surrounded by a blue sky.
         Then I took the miage to audacity and played with the different settings that would be applied to sound. I was also inspired by vaporwave art that I find on social media.
