--- a/html/cloudy.html
+++ b/html/cloudy.html
@@ -52,7 +52,7 @@ body {
   </body>
   <!--end of Nav bar-->
 <h2> 
-  <img src="images/cloudy404.jpg" alt="cloud404"> 
+  <img src="/images/cloudy404.jpg" alt="cloud404"> 
 </h2>
 <h3>Glitch Art</h3>
       <p>"My "happy place" is above the clouds, and that imagery inspired this artwork. I had an image that I took from a flight of fluffy white clouds surrounded by a blue sky.
