wow things fixed

--- a/artwork.html
+++ b/artwork.html
@@ -91,7 +91,7 @@ body{
   <div class="container">
       <div class="our-work">
         <div>
-          <a href="html/StayHome.html">
+          <a href="StayHome.html">
             <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
           </a>
         </div>
@@ -101,27 +101,27 @@ body{
           </a>
         </div>
         <div>
-          <a href= "html/proj1.html">
+          <a href= "proj1.html">
             <img src="images/proj1.png" alt="video">
           </a>
         </div>
         <div>
-          <a href="html/tweet.html">
+          <a href="tweet.html">
             <img src="images/tweet.gif" alt="tweet">
           </a>
         </div>
         <div>
-           <a href="html/kanyequest.html">
+           <a href="kanyequest.html">
             <img src="images/kanyequest.png" alt="kanyequest">
           </a>
         </div>
         <div>
-          <a href="html/cloudy.html">
+          <a href="cloudy.html">
             <img src="images/cloudy404.jpg" alt="cloud404">
           </a>
         </div>
         <div>
-          <a href="html/Flow.html">
+          <a href="Flow.html">
              <img src="images/flow.png" alt="free">
            </a>
           </div>
@@ -129,27 +129,27 @@ body{
             <img src="images/Processingportrait.png" alt="portrait">
           </div>
         <div>
-          <a href="html/invclk.html">
+          <a href="invclk.html">
             <img src="images/Invisi-cloak.png" alt="Invisi-cloak">
             </a>
           </div>
         <div>
-          <a href="html/3dmashup.html">
+          <a href="3dmashup.html">
               <img src="images/3dmashup.png" alt="3dmashup">
             </a>
           </div>
           <div>
-            <a href="html/citypopescape.html">
+            <a href="citypopescape.html">
               <img src="images/codeasart.jpg" alt="citypop">
             </a>
           </div>
       <div>
-        <a href="html/pastel.html">
+        <a href="pastel.html">
           <img src="images/pastel.jpg" alt="pastel">
         </a>
 		    </div>
 		    <div>
-        <a href="html/paintings.html">
+        <a href="paintings.html">
           <img src="images/painting3.png" alt="neon">
         </a>
 		    </div>
