--- a/paintings.html
+++ b/paintings.html
@@ -35,9 +35,9 @@ body {
 
     <div class="navbar">
       <ul class="navlist">
-        <li><a href="/ePortfolio/index.html">Home</a></li>
-        <li><a href="/ePortfolio/artwork.html">Artwork</a></li>
-        <li><a href="/ePortfolio/about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="artwork.html">Artwork</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
