--- a/citypopescape.html
+++ b/citypopescape.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Navigation bar-->
 <head>
-  <script type="text/javascript" src="processing.js"></script>
+  <script type="text/javascript" src="media/processing.js"></script>
     <title> Sophia Martinez </title>
 <style>
 body {
