what happened to the formal noo

--- a/artwork.html
+++ b/artwork.html
@@ -106,6 +106,10 @@ body{
           </a>
         </div>
         <div>
+          <a href="proj2.html">
+            <img src="images/project2conceptart.png" alt="proj2">
+          </a>
+        <div>
           <a href="tweet.html">
             <img src="images/tweet.gif" alt="tweet">
           </a>
