added flower sanctuary

--- a/about.html
+++ b/about.html
@@ -65,8 +65,28 @@ body {
       <h1>About Me</h1>
       <img src="images/bealright.png" class="w3-margin w3-circle" alt="mystyle" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network.
-	I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64! </p>
+        <p>My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network. I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64!
+        I would like to consider myself a digitally literate person who can surf the web and keep
+up with the mainstream of internet culture and technology. Yet growing up on the internet did
+not prepare me for the art of creating digital media art or coding. Over this past semester I
+worked on expanding my knowledge in CSS and html, experimenting with videography through
+Adobe PremierePro and After Effects.
+I learned that coding is not as simple as it appears to be. The process is more extensive
+than copying and pasting, especially when I had a particular design in mind, which is why I feel
+comfortable finding inspiration and capturing small details. In Quar-ad-venture ( 2020) and
+Stay Home (Demo) (2020), the narratives and aesthetic choices were inspired by online web
+comics and video games from the late 90s/early 2000s. I want to pay homage to these interests
+that paved the way for technological and pop cultural development. Both of these works emulate
+adventures that fantasize normal life pre-COVID19, a lifestyle that realistically reflected my own.
+I was not interested in doing high-energy activities in the first place, now limited shopping and
+simply existing outside are adventures unfamiliar for me. One of the early projects I worked on,
+Transience: Capturing the Subtle Things in Life (2020), is reminiscent of the simplicity from
+Quar-ad-venture (2020) and Stay Home (Demo) (2020) in the way that the footage is taken
+from a transient and observational perspective. The colors chosen for the filters convey a playful
+and somewhat nostalgic feeling.
+My belief that my journey as an artist branches out and has the bandwidth to roll back
+into being inspired by the past. I enjoy timelessness, and seeing how technology and pop
+culture evolve along my journey. </p>
 	      <p> Email- sophiaymartinez@gmail.com </p>     
 	    </div>
 		    </div>
