fixed image links

--- a/artwork.html
+++ b/artwork.html
@@ -110,9 +110,13 @@ body{
             <img src="images/project2conceptart.png" alt="proj2">
           </a>
         <div>
+          <a href="flowersanctuary.html">
+            <img src="images/flowersanc.png" alt="minecraftmuseum">
+          </a>
+         <div>
           <a href="tweet.html">
             <img src="images/tweet.gif" alt="tweet">
-          </a>
+          </a> 
         </div>
         <div>
            <a href="kanyequest.html">
