--- a/flowersanctuary.html
+++ b/flowersanctuary.html
@@ -48,13 +48,13 @@ body {
   <!--end of Nav bar-->
 
   <body>
-    <img src="flowersanc.png" alt="flowersanc">
-    <img src="flowersanc2.png" alt="flowersanc2">
-    <img src="flowersanc3.png" alt="flowersanc3">
-    <img src="flowersanc5.png" alt="flowersanc5">
-    <img src="flowersanc7.png" alt="flowersanc7">
-    <img src="flowersanc10.png" alt="flowersanc10">
-    <img src="flowersanc11.png" alt="flowersanc11">
+    <img src="images/flowersanc.png" alt="flowersanc">
+    <img src="images/flowersanc2.png" alt="flowersanc2">
+    <img src="images/flowersanc3.png" alt="flowersanc3">
+    <img src="images/flowersanc5.png" alt="flowersanc5">
+    <img src="images/flowersanc7.png" alt="flowersanc7">
+    <img src="images/flowersanc10.png" alt="flowersanc10">
+    <img src="images/flowersanc11.png" alt="flowersanc11">
 <iframe src="https://www.youtube.com/embed/ZCOOxrhFtjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 <p> In collaboration with SJSU Virtual Institute of Simulation Art</p>
 <a href="https://visatopia.xyz/oasis/Sophia_Martinez.html"> </a>
